# uftt

./: CMakeLists.txt  Changelog.md  Compiling.md  CompilingUbuntu.md  Downloads.md  Makefile.am  ProjectHome.md  README.md  ReleaseVr961.md  UFTTHowto.md  adsense.xml  autogen.sh  configure.ac  reconf
src/: AutoUpdate.cpp  AutoUpdate.h  Benchmark.cpp  BufferManager.h  BuildString.cpp  BuildString.h  BuildStringMacros.cpp  CMakeLists.txt  FReadFileReader.cpp  FReadFileReader.h  FReadMemoryBuffer.cpp  FReadMemoryBuffer.h  Globals.h  IBackend.h  IFileReader.h  IMemoryBuffer.h  JobRequest.cpp  JobRequest.h  Logger.h  Main.cpp  Makefile.am  Platform.cpp  Platform.h  SharedData.cpp  SharedData.h  SimpleBackend.cpp  SimpleBackend.h  SimpleConnection.cpp  SimpleConnection.h  Types.h  UFTTCommandLine.cpp  UFTTCommandLine.h  UFTTCore.cpp  UFTTCore.h  UFTTGui.cpp  UFTTGui.h  UFTTSettings.cpp  UFTTSettings.h  UFTTSettingsLegacy.cpp  UFTTSettingsLegacy.h  (+28 more)
src/bench/: Bench2.cpp  Bench3.cpp  Bench4.cpp  Bench5.cpp  Bench7.cpp  Benchmark.cpp  CMakeLists.txt  libnetlink.h
src/boost_asio_1_1_0/: README.txt
src/boost_asio_1_1_0/libs/asio/: index.html
src/boost_asio_1_1_0/libs/asio/doc/html/: index.html  standalone_HTML.manifest
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/: design.html  examples.html  reference.html  tutorial.html  using.html
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/design/: allocation.html  async.html  buffers.html  eof.html  implementation.html  line_based.html  rationale.html  strands.html  threads.html
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/reference/: AcceptHandler.html  AsyncReadStream.html  AsyncWriteStream.html  CompletionHandler.html  ConnectHandler.html  ConstBufferSequence.html  ConvertibleToConstBuffer.html  ConvertibleToMutableBuffer.html  DatagramSocketService.html  DescriptorService.html  Endpoint.html  GettableSocketOption.html  HandleService.html  Handler.html  InternetProtocol.html  IoControlCommand.html  IoObjectService.html  MutableBufferSequence.html  Protocol.html  ReadHandler.html  ResolveHandler.html  ResolverService.html  Service.html  SettableSocketOption.html  SocketAcceptorService.html  SocketService.html  StreamDescriptorService.html  StreamHandleService.html  StreamSocketService.html  SyncReadStream.html  SyncWriteStream.html  TimeTraits.html  TimerService.html  WaitHandler.html  WriteHandler.html  add_service.html  asio_handler_allocate.html  asio_handler_deallocate.html  asio_handler_invoke.html  async_read.html  (+110 more)
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/reference/async_read/: overload1.html  overload2.html  overload3.html  overload4.html
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/reference/async_read_until/: overload1.html  overload2.html  overload3.html
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/reference/async_write/: overload1.html  overload2.html  overload3.html  overload4.html
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/reference/basic_datagram_socket/: assign.html  async_connect.html  async_receive.html  async_receive_from.html  async_send.html  (+51 more)
src/boost_asio_1_1_0/libs/asio/doc/html/boost_asio/tutorial/: tutdaytime1.html  tutdaytime2.html  tutdaytime3.html  tutdaytime4.html  tutdaytime5.html  tutdaytime6.html  tutdaytime7.html  tuttimer1.html  tuttimer2.html  tuttimer3.html  tuttimer4.html  tuttimer5.html
src/console-ui/: CMakeLists.txt  cuftt.cpp
src/files/: CMakeLists.txt  FileInfo.cpp  FileInfo.h
src/gtk-gui/: AutoScrollingWindow.cpp  AutoScrollingWindow.h  CMakeLists.txt  GTKImpl.cpp  GTKImpl.h  GTKMain.cpp  GTKMain.h  Notification.cpp  Notification.h  OStreamGtkTextBuffer.h  PreferencesDialog.cpp  PreferencesDialog.h  ShareList.cpp  ShareList.h  ShowURI.cpp  ShowURI.h  TaskList.cpp  TaskList.h  dispatcher_marshaller.h
src/linux/: CMakeLists.txt  libnetlink.c  libnetlink.h
src/net-asio/: CMakeLists.txt  asio_dgram_conn.h  asio_file_stream.cpp  asio_file_stream.h  asio_http_request.h  asio_ipx.cpp  asio_ipx.h  ipaddr_watcher.cpp  ipaddr_watcher.h  ipaddr_watcher_osimpl.cpp  ipaddr_watcher_osimpl_v4unix.cpp  ipaddr_watcher_osimpl_v6linux.cpp  ipaddr_watcher_osimpl_windows.cpp  ipx_conn.cpp  ipx_conn.h
src/network/: CMakeLists.txt  ConnectionBase.cpp  ConnectionBase.h  ConnectionCommon.cpp  ConnectionCommon.h  CrossPlatform.h  HTTPBackend.cpp  HTTPBackend.h  INetModule.h  Misc.cpp  Misc.h  NetModuleLinker.cpp  NetModuleLinker.h  NetworkThread.cpp  NetworkThread.h  Packet.h  SharedData.cpp  SharedData.h  SimpleBackend.cpp  SimpleBackend.h  SimpleBackendBase.cpp  SimpleBackendBase.h  SimpleBackendIPv4.cpp  SimpleBackendIPv4.h  SimpleBackendIPv6.cpp  SimpleBackendIPv6.h  SimpleConnection.cpp  SimpleConnection.h  SimpleTCPConnection.h  TestModule.cpp  TestModule.h  UDPSemiConnection.h
src/network-old/: CrossPlatform.h  NetworkThread.cpp  NetworkThread.h  Packet.h
src/qt-gui/: CMakeLists.txt  DialogDirectoryChooser.cpp  DialogDirectoryChooser.h  DialogDirectoryChooser.ui  DialogPreferences.cpp  DialogPreferences.h  DialogPreferences.ui  ExtUTF8.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  QDebugStream.h  QDragDropSignalWidget.cpp  QDragDropSignalWidget.h  QDragDropTreeWidget.cpp  QDragDropTreeWidget.h  QExtPlatform.cpp  QExtPlatform.h  QExtUTF8.h  QMarshaller.cpp  QMarshaller.h  QPathComboBox.cpp  QPathComboBox.h  QSharesTreeWidget.cpp  QSharesTreeWidget.h  QTMain.cpp  QTMain.h  QToggleHeaderAction.cpp  QToggleHeaderAction.h  QtBooster.h  QtLogger.h  UFTTSettings.cpp  UFTTSettings.h  qsharestreewidget.cpp
src/qt-gui/Icons/: icon.rc  icons.qrc  uftt.icns
src/sha1/: CMakeLists.txt  SHA1.cpp  SHA1.h  sha1_impl.c
src/util/: Base64.cpp  Base64.h  CMakeLists.txt  Coro.h  Filesystem.cpp  Filesystem.h  PosixError.h  ScopeExitSignal.cpp  ScopeExitSignal.h  SettingsManager.cpp  SettingsManager.h  SignalConnection.cpp  SignalConnection.h  StrFormat.h  UPXFix.h  asio_sync_dispatcher.h  asio_timer_oneshot.h  bin2c.c  coroutine.hpp
tests/: CMakeLists.txt  cygkill.sh  download1.sh  dummy1.sh  filesystem1.cpp  quit1.sh  quit2.sh  testdriver.sh
(+1422 files in other folders)
