dnl Process this file with autoconf to produce a configure script.
AC_INIT(uftt, 0.0.1, simon.sasburg@gmail.com)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src/main.cpp)
AC_CONFIG_HEADER(src/config.h)

AM_INIT_AUTOMAKE

AC_PROG_CXX
AC_PROG_INSTALL

AC_CONFIG_FILES([Makefile
          doc/Makefile
          m4/Makefile
          src/Makefile
	  ])

AC_OUTPUT
